# CGraph

./: .gitignore  .gitmodules  CMakeLists.txt
python/: CMakeLists.txt  README.md  install_dependencies.sh  output.txt  setup.py  setupPy.py  test.py
python/PyObject/: GPipelinePy.h
python/PyWrapper/: py_GElement.h  py_GNode.h  py_export.cpp
python/_Python/: GPipelineFactoryPy.cpp  GPipelineFactoryPy.h  GPipelinePy.cpp  GPipelinePy.h
python/c/: py_bind.h  py_export.cpp
python/pyCGraph.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/test/: T01-simple.py
src/GraphCtrl/: GraphInclude.h
src/GraphCtrl/GraphElement/: GElement.cpp  GElement.h  GElementDefine.h  GElementManager.cpp  GElementManager.h  GElementProcessor.cpp  GElementProcessor.h
src/GraphCtrl/GraphElement/GCount/: GCount.cpp  GCount.h
src/GraphCtrl/GraphElement/GGroup/GCluster/: GCluster.cpp  GCluster.h
src/GraphCtrl/GraphElement/GGroup/GCondition/: GCondition.cpp  GCondition.h
src/GraphCtrl/GraphElement/GGroup/GRegion/: GRegion.cpp  GRegion.h
src/GraphCtrl/GraphElement/_GEngine/: GEngineDefine.h  GEngineInclude.h
src/GraphCtrl/GraphEngine/: DynamicGraphEngine.cpp  DynamicGraphEngine.h  GEngineInclude.h  GraphEngine.cpp  GraphEngine.h  GraphEngineCounter.cpp  GraphEngineCounter.h  StaticGraphEngine.cpp  StaticGraphEngine.h
src/GraphCtrl/GraphPipeline/: GPipeline.cpp  GPipeline.h  GPipelinePy.cpp
tutorial/: T01-Simple.cpp  T02-Cluster.cpp  T03-Region.cpp  T04-Complex.cpp  T05-Param.cpp  T06-Condition.cpp  T12-Function.cpp  T17-ElementComplex.cpp
tutorial/MyGNode/: MyNode3.h  MyReadParamNode.h  MyWriteParamNode.h
(+2 files in other folders)
